--- a/website/index.html
+++ b/website/index.html
@@ -121,6 +121,9 @@
                         <!-- /.panel-body -->
                     </div>
 
+<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+				   <div id="chart1" style="width:400px;height:200px;"></div>
+			       </div> 
                 </div>
 
             </div>
@@ -147,7 +150,16 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="../dist/js/sb-admin-2.js"></script>
+    <script src="../js/jquery.flot.js"></script>
 
+<!-- jQuery -->
+		<!-- Socket.io-client Javascript -->
+		<script src="../js/socket.io-1.2.0.js"></script>
+
+		<!-- Custom Javascript -->
+		<script src="../js/others.js"></script>
+		<script src="../js/jquery.flot.js"></script>
+		<script src="../js/bootstrap-toggle.min.js"></script>
 </body>
 
 </html>
